--- a/products.html
+++ b/products.html
@@ -53,18 +53,16 @@
   <li>The value of the checkbox</li>
 </ul>
 
-
-    
-
     <!--
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     -->
-    <script src="js/16.6.3/react.development.js"></script>
-    <script src="js/16.6.3/react-dom.development.js"></script>
-    <script src="js/babel.min.js"></script>
+
+    <script src="js/vendor/react.development.js"></script>
+    <script src="js/vendor/react-dom.development.js"></script>
+    <script src="js/vendor/babel.min.js"></script>
 
     <script type="text/babel" src="js/products.js"></script>
   </body>
