Add link to official React tutorial

--- a/theory.html
+++ b/theory.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
+    <h1>React Theory</h1>
+
     <h2>1. Elements</h2>
     <div id="root-1"></div>
     <ul class="notes">
@@ -157,6 +159,11 @@ const todoItems = todos.map((todo, index) =>
       <li>If you want to reuse non-UI functionality between components, we suggest extracting it into a separate JavaScript module. The components may import it and use that function, object, or a class, without extending it.</li>
     </ul>
 
+    <hr>
+
+    <p>Source: 
+      <a href="https://reactjs.org/docs/hello-world.html">Official React Tutorial</a>
+    </p>
 
     <!--
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
